bk_ida/gccida/c2/final_giv_value
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/final_giv_value/src/unroll.c:3741:49: error: unknown type name 'induction_1'
rtx  final_giv_value( const  struct loop *loop, induction_1 *v) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/final_giv_value/src/unroll.c:3785:56: error: use of undeclared identifier 'machine_mode'
v8 = fold_rtx_mult_add( v8, v11, *( rtx *)( i + 72), ( machine_mode)*( _DWORD *)( i + 48)); 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/final_giv_value/src/unroll.c:3815:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v6 + 2), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/final_giv_value/src/obj/unroll.o] Error 1
